Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-Nov-2010 Christophe Demko
 # [#23197] onUserBeforeSave needs to be able cancel the creation of an account (Andrew Eddie)

17-Nov-2010 Jean-Marie Simonet
 # Added icon for the new My Profile menu [#23347]
 
17-Nov-2010 Andrew Eddie
 # Fixed issue [#23347] Move profile editing out of com_users and into com_admin
 # Fixed issue [#23110] Any user with create or edit rights to com_user can make a group a superadmin group (Elin Waring).
 # Fixed issue [#23348] Improve scaling architecture for users and groups lists.
 # Fixed issue [#23241] Saving category while validating rules fails (Mark Dexter, Christophe Demko).
 # Fixed issue [#21837] @todo ACL - Disallow creation of Super User & Admin group by non Super User (Michael Babker, Christopher Garvis, Elin Waring).
 # Fixed issue [#23306] "Add New Article" quick icon permissions check (Michael Babker, Elin Waring, Christophe Demko).
 # Fixed issue [#22868] Improving permissions debug (Dennis Hermacki, Andrea Tarr).
  
16-Nov-2010 Christophe Demko
 # Fix the Edit profile permission

16-Nov-2010 Mark Dexter
# [#23328] Unpublished category - Featured - Errors in content and contact component

16-Nov-2010 Jean-Marie Simonet
 $ Deleting redundant strings.
 $ Correcting wrong EOL from [#23184]
 # [#23334] error in sample data. Thanks Dennis.

-------------------- 1.6.0 Beta14 Release [15-Nov-2010] ------------------

15-Nov-2010 Mark Dexter
# Sample data fixes (thanks Elin Waring)
# [#23184] Need to handle content, modules, menu items when a viewing permission level is deleted
# [#23319] Can't install Joomla or choose the accessible admin template without a mouse (thanks Andrea Tarr)
# Fix About Parks module assignment in sample data