@@ -1,0 +1,8 @@
+; @version		$Id$
+; @package		Joomla
+; @subpackage	plgSystemLogout
+; @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
+; @license		GNU General Public License version 2 or later; see LICENSE.txt
+
+PLG_SYSTEM_LOGOUT_XML_DESCRIPTION="The system logout plug-in enables the Joomla to redirect the user to the home page if he chooses to logout while he is on a protected access page."
+PLG_SYSTEM_LOGOUT="System - Logout"
