@@ -51,11 +51,7 @@ class WeblinksController extends JController
 		// Check for edit form.
 		if ($vName == 'form' && !$this->checkEditId('com_weblinks.edit.weblink', $id)) {
 			// Somehow the person just went to the form - we don't allow that.
-			$this->setError(JText::sprintf('JLIB_APPLICATION_ERROR_UNHELD_ID', $id));
-			$this->setMessage($this->getError(), 'error');
-			$this->setRedirect(JRoute::_('index.php', false));
-
-			return false;
+			return JError::raiseError(403, JText::sprintf('JLIB_APPLICATION_ERROR_UNHELD_ID', $id));
 		}
 
 		return parent::display($cachable,$safeurlparams);
